--- a/java/22/Dockerfile
+++ b/java/22/Dockerfile
@@ -19,5 +19,7 @@ USER        container
 ENV         USER=container HOME=/home/container
 WORKDIR     /home/container
 
+RUN ["chmod", "+x", "ServerStart.sh"]
+
 COPY        ./entrypoint.sh /entrypoint.sh
 CMD         [ "/bin/bash", "/entrypoint.sh" ]
